Fix a bad gap on mobile

--- a/src/styles/_itemTile.scss
+++ b/src/styles/_itemTile.scss
@@ -47,6 +47,10 @@
   font-size: .85em;
 }
 
+.item-tile {
+  margin-bottom: 35px;
+}
+
 .item-tile-horizontal {
   margin-top: 15px;
   margin-bottom: 35px;
